update readme and favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Varela+Round">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
