init ssr integration

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Varela+Round">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Varela+Round"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hi.Events</title>
   </head>
   <body>
-    <div id="hievents-root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="app"><!--app-html--></div>
+    <script type="module" src="/src/entry.client.tsx"></script>
+    <!--dehydrated-state-->
   </body>
 </html>
