server rendering i18n and helmet

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,9 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hi.Events</title>
+
+    <!--render-helmet-->
+
   </head>
   <body>
     <div id="app"><!--app-html--></div>
