fix flicker and persisting token in ssr

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,5 +18,6 @@
     <div id="app"><!--app-html--></div>
     <script type="module" src="/src/entry.client.tsx"></script>
     <!--dehydrated-state-->
+    <!--extra-state-->
   </body>
 </html>
