Widget design fixes

--- a/frontend/public/widget-test.html
+++ b/frontend/public/widget-test.html
@@ -3,27 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script async src="http://localhost:5173/widget.js"></script>
-
+    <script async src="https://localhost:8443/widget.js"></script>
 </head>
-<body>
+<body style="background-color: #000000; padding: 0px; color: #ffffff;">
 
 <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias asperiores atque autem cumque
 </p>
-<div data-hievents-id="57"
-     data-hievents-primary-color="#FF0000"
-     data-hievents-secondary-color="#000000"
-     data-hievents-widget-type="widget"
-     data-hievents-widget-version="1.0"
-     data-hievents-locale="en"
-     class="hievents-widget">
-</div>
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias asperiores atque autem cumque
-</p><p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias asperiores atque autem cumque
-</p>
+
+<div style="width: 500px;">
+    <div data-hievents-id="7"
+         data-hievents-primary-color="#c3b8d9"
+         data-hievents-primary-text-color="#ffffff"
+         data-hievents-secondary-color="#525252"
+         data-hievents-secondary-text-color="#ffffff"
+         data-hievents-background-color="#000000"
+         data-hievents-widget-type="widget"
+         data-hievents-widget-version="1.0"
+         data-hievents-locale="en"
+         data-hievents-padding="20px"
+         data-hievents-autoresize="true"
+         data-hievents-continue-button-text="Lets's go"
+         class="hievents-widget">
+
+    </div>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias asperiores atque autem cumque
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, alias asperiores atque autem cumque
+    </p>
 
 </body>
 </html>
