Add fathom snippet

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--render-helmet--><title>Hi.Events</title><!--/render-helmet-->
     <!--environment-variables-->
+    <!--head-snippets-->
   </head>
   <body >
     <div id="app"><!--app-html--></div>
