--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Varela+Round"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--render-helmet--><title>Hi.Events</title><!--/render-helmet-->
+    <!--render-helmet--><title>MAKE YOUR PASS</title><!--/render-helmet-->
     <!--environment-variables-->
     <!--head-snippets-->
   </head>
