Update the checkout process

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Varela+Round"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.bunny.net/css?family=outfit:400,500,600,700,800|plus-jakarta-sans:400,500,600,700&display=swap"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--render-helmet--><title>Hi.Events</title><!--/render-helmet-->
     <!--environment-variables-->
