--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
+      <!-- Favicon -->
+      <link rel="icon" href="/manifest-icons/favicon.ico" sizes="48x48">
+      <link rel="icon" href="/manifest-icons/favicon.svg" type="image/svg+xml">
+      <link rel="icon" type="image/png" sizes="32x32" href="/manifest-icons/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/manifest-icons/favicon-16x16.png">
+
+      <!-- Apple Touch Icon -->
+      <link rel="apple-touch-icon" sizes="180x180" href="/manifest-icons/apple-touch-icon.png">
+
+      <!-- Manifest -->
+      <link rel="manifest" href="/manifest-icons/site.webmanifest">
+
+      <!-- Theme colors -->
+      <meta name="theme-color" content="#cd58dd">
+      <meta name="msapplication-TileColor" content="#18181b">
+
+      <link
       rel="stylesheet"
       href="https://fonts.bunny.net/css?family=outfit:400,500,600,700,800|plus-jakarta-sans:400,500,600,700&display=swap"
     />
