--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,12 +7,14 @@
       <link rel="icon" href="/manifest-icons/favicon.svg" type="image/svg+xml">
       <link rel="icon" type="image/png" sizes="32x32" href="/manifest-icons/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/manifest-icons/favicon-16x16.png">
+      <link rel="shortcut icon" href="/manifest-icons/favicon.ico">
+      <link rel="icon" href="/favicon.ico">
 
       <!-- Apple Touch Icon -->
       <link rel="apple-touch-icon" sizes="180x180" href="/manifest-icons/apple-touch-icon.png">
 
       <!-- Manifest -->
-      <link rel="manifest" href="/manifest-icons/site.webmanifest">
+      <link rel="manifest" href="/site.webmanifest">
 
       <!-- Theme colors -->
       <meta name="theme-color" content="#cd58dd">
